--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
       font-family: 'Montserrat', sans-serif;
       background-color: var(--bg-dark);
       color: var(--text-light);
-      margin: 0;
-      padding: 0;
     }
-
-    /* Header fijo más pequeño */
     .navbar-custom {
       background-color: rgba(13,13,13,0.95);
       backdrop-filter: blur(12px);
@@ -48,10 +44,6 @@
       color: var(--text-light);
       height: 45px;
       border-radius: 30px 0 0 30px;
-      font-size: 0.95rem;
-    }
-    .search-input::placeholder {
-      color: var(--text-muted);
     }
     .search-btn {
       background-color: var(--accent-gold);
@@ -64,149 +56,66 @@
       color: var(--text-light);
       font-size: 1.5rem;
       margin-left: 1rem;
-      transition: color 0.3s;
+      cursor: pointer;
     }
-    .nav-icon:hover {
-      color: var(--accent-gold);
-    }
-
-    /* Iconos de usuario y carrito pegados al lado derecho de la barra de búsqueda */
-    .search-group {
-      display: flex;
-      align-items: center;
-    }
-    .icons-right {
-      margin-left: 1.5rem;
-    }
-
-    /* En móvil: vertical */
-    @media (max-width: 992px) {
-      .navbar-custom .container {
-        flex-direction: column;
-        gap: 0.8rem;
-      }
-      .search-group {
-        width: 100%;
-        justify-content: space-between;
-      }
-      .icons-right {
-        margin-left: 0;
-      }
-    }
-
-    /* Hero section */
+    .nav-icon:hover { color: var(--accent-gold); }
     .hero {
       height: 80vh;
       min-height: 600px;
-      background: linear-gradient(var(--overlay), var(--overlay)),
-                  url('https://images.stockx.com/images/Alexander-McQueen-Oversized-Light-Gold-Product.jpg?fit=fill&bg=FFFFFF&w=1400&h=1000&fm=webp&auto=compress&q=90') center/cover no-repeat;
+      background: linear-gradient(var(--overlay), var(--overlay)), url('https://images.stockx.com/images/Alexander-McQueen-Oversized-Light-Gold-Product.jpg?fit=fill&bg=FFFFFF&w=1400&h=1000&fm=webp&auto=compress&q=90') center/cover no-repeat;
       display: flex;
       align-items: center;
       text-align: center;
+      position: relative;
     }
-    .hero-title {
-      font-size: 4rem;
-      font-weight: 800;
-      margin-bottom: 1.5rem;
-      text-transform: uppercase;
+    .edit-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(0,0,0,0.6);
+      padding: 8px;
+      border-radius: 50%;
+      cursor: pointer;
+      display: none;
     }
-    .hero-text {
-      font-size: 1.5rem;
-      font-weight: 500;
-      max-width: 900px;
-      margin: 0 auto 3rem;
-      line-height: 1.9;
-    }
-    .cta-btn {
-      background-color: var(--accent-gold);
-      color: #000;
-      font-weight: 700;
-      padding: 1rem 3rem;
-      border-radius: 50px;
-      font-size: 1.3rem;
-      transition: all 0.3s;
-    }
-    .cta-btn:hover {
-      background-color: #e6c04a;
-      transform: translateY(-4px);
-    }
-
-    /* Colección Principal - Fondo blanco, 4 contenedores pequeños en una fila */
-    .collection-section {
-      background-color: var(--white-bg);
-      color: #000;
-      padding: 6rem 0;
-    }
-    .section-title {
-      font-size: 3rem;
-      font-weight: 800;
-      text-align: center;
-      margin-bottom: 4rem;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
+    .admin-only { display: none; }
     .product-card {
+      position: relative;
       background-color: #f8f8f8;
       border-radius: 10px;
       overflow: hidden;
       box-shadow: 0 4px 20px rgba(0,0,0,0.08);
       transition: transform 0.3s ease;
     }
-    .product-card:hover {
-      transform: translateY(-10px);
-    }
-    .product-img {
-      width: 100%;
-      height: 240px; /* Más pequeño para que quepan bien 4 en fila */
-      object-fit: cover;
-    }
-    .product-info {
-      padding: 1rem;
-      text-align: center;
-    }
-    .product-title {
-      font-weight: 700;
-      font-size: 1rem;
-      margin-bottom: 0.6rem;
-      text-transform: uppercase;
-    }
-    .product-price {
-      font-size: 1.3rem;
-      font-weight: 800;
-      color: #000;
-    }
-
+    .product-card:hover { transform: translateY(-10px); }
+    .product-img { width: 100%; height: 240px; object-fit: cover; }
+    .section-title { position: relative; }
     @media (max-width: 768px) {
       .hero-title { font-size: 3rem; }
-      .hero-text { font-size: 1.2rem; }
-      .section-title { font-size: 2.4rem; }
-      .product-img { height: 200px; }
     }
   </style>
 </head>
 <body>
-  <!-- Header fijo -->
+
+  <!-- Header -->
   <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
     <div class="container d-flex justify-content-between align-items-center flex-wrap">
       <a class="navbar-brand" href="#">narf shop.mx</a>
-
-      <!-- Barra de búsqueda + iconos pegados a la derecha -->
       <div class="search-group mx-auto">
         <div class="input-group" style="max-width: 600px;">
           <input type="text" class="form-control search-input" placeholder="Buscar sneakers premium...">
           <button class="btn search-btn"><i class="bi bi-search"></i></button>
         </div>
-
         <div class="icons-right d-flex align-items-center">
-          <a href="#" class="nav-icon"><i class="bi bi-person"></i></a>
+          <a class="nav-icon" data-bs-toggle="modal" data-bs-target="#authModal"><i class="bi bi-person"></i></a>
           <a href="#" class="nav-icon"><i class="bi bi-cart3"></i></a>
         </div>
       </div>
     </div>
   </nav>
 
-  <!-- Hero section -->
-  <section class="hero">
+  <!-- Hero -->
+  <section class="hero" id="heroSection">
     <div class="container">
       <h1 class="hero-title">Sneakers Premium</h1>
       <div class="hero-text">
@@ -216,53 +125,249 @@
       </div>
       <a href="#coleccion" class="btn cta-btn">EXPLORAR COLECCIÓN</a>
     </div>
+    <i class="bi bi-pencil edit-icon admin-only" onclick="editHero()"></i>
   </section>
 
-  <!-- Colección Principal - 4 contenedores pequeños en una fila -->
+  <!-- Colección -->
   <section id="coleccion" class="collection-section">
     <div class="container">
-      <h2 class="section-title">Colección Principal</h2>
-      
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4 g-lg-5">
-        <div class="col">
-          <div class="product-card">
-            <img src="https://images.stockx.com/images/Alexander-McQueen-Oversized-Light-Gold-Product.jpg?fit=fill&bg=FFFFFF&w=700&h=500&fm=webp&auto=compress&q=90" alt="McQueen Oversized" class="product-img">
-            <div class="product-info">
-              <div class="product-title">McQueen Oversized Gold</div>
-              <div class="product-price">$3,800 MXN</div>
-            </div>
-          </div>
+      <h2 class="section-title" id="sectionTitle">Colección Principal</h2>
+      <i class="bi bi-pencil edit-icon admin-only" onclick="editSectionTitle()"></i>
+      <button class="btn btn-warning admin-only mb-4" onclick="addProduct()">+ Agregar Producto</button>
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4 g-lg-5" id="productsContainer">
+        <!-- Productos se cargarán aquí dinámicamente -->
+      </div>
+    </div>
+  </section>
+
+  <!-- Modal Auth -->
+  <div class="modal fade" id="authModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content bg-dark text-light">
+        <div class="modal-header">
+          <h5 class="modal-title" id="authModalTitle">Iniciar Sesión</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
         </div>
-        <div class="col">
-          <div class="product-card">
-            <img src="https://images.stockx.com/images/Nike-Air-Force-1-Low-White-07-Product.jpg?fit=fill&bg=FFFFFF&w=700&h=500&fm=webp&auto=compress&q=90" alt="Air Force 1" class="product-img">
-            <div class="product-info">
-              <div class="product-title">Nike Air Force 1 White</div>
-              <div class="product-price">$2,900 MXN</div>
+        <div class="modal-body">
+          <div id="loginForm">
+            <div class="mb-3">
+              <label class="form-label">Email</label>
+              <input type="email" id="loginEmail" class="form-control" required>
             </div>
+            <div class="mb-3">
+              <label class="form-label">Contraseña</label>
+              <input type="password" id="loginPassword" class="form-control" required>
+            </div>
+            <button class="btn btn-primary w-100 mb-2" onclick="login()">Iniciar Sesión</button>
+            <button class="btn btn-outline-light w-100 mb-3" onclick="googleSignIn()">
+              <i class="bi bi-google"></i> Continuar con Google
+            </button>
+            <p class="text-center"><a href="#" onclick="showRegister()">¿No tienes cuenta? Regístrate</a></p>
           </div>
-        </div>
-        <div class="col">
-          <div class="product-card">
-            <img src="https://images.stockx.com/images/Balenciaga-Triple-S-Clear-Sole-Black-Product.jpg?fit=fill&bg=FFFFFF&w=700&h=500&fm=webp&auto=compress&q=90" alt="Balenciaga Triple S" class="product-img">
-            <div class="product-info">
-              <div class="product-title">Balenciaga Triple S</div>
-              <div class="product-price">$4,200 MXN</div>
+
+          <div id="registerForm" style="display:none;">
+            <div class="mb-3">
+              <label class="form-label">Nombre o Email</label>
+              <input type="email" id="regEmail" class="form-control" required>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="product-card">
-            <img src="https://images.stockx.com/images/Adidas-Yeezy-Boost-350-V2-Black-Red-Product.jpg?fit=fill&bg=FFFFFF&w=700&h=500&fm=webp&auto=compress&q=90" alt="Yeezy Boost 350" class="product-img">
-            <div class="product-info">
-              <div class="product-title">Yeezy Boost 350</div>
-              <div class="product-price">$3,500 MXN</div>
+            <div class="mb-3">
+              <label class="form-label">Contraseña</label>
+              <input type="password" id="regPassword" class="form-control" required>
             </div>
+            <div class="mb-3">
+              <label class="form-label">Confirmar Contraseña</label>
+              <input type="password" id="regConfirm" class="form-control" required>
+            </div>
+            <button class="btn btn-success w-100" onclick="register()">Registrarse</button>
+            <p class="text-center mt-3"><a href="#" onclick="showLogin()">¿Ya tienes cuenta? Inicia sesión</a></p>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+
+  <!-- Scripts Firebase -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js";
+    import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-storage.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAt8TuulnlY3IKPaFVctgaGNQWewfzONEI",
+      authDomain: "comprobantes-363c9.firebaseapp.com",
+      databaseURL: "https://comprobantes-363c9-default-rtdb.firebaseio.com",
+      projectId: "comprobantes-363c9",
+      storageBucket: "comprobantes-363c9.firebasestorage.app",
+      messagingSenderId: "390391998056",
+      appId: "1:390391998056:web:23e22073d88bc247d43ddd",
+      measurementId: "G-8W03RJD0TZ"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+    const storage = getStorage(app);
+    const provider = new GoogleAuthProvider();
+
+    let currentUser = null;
+    const admins = ["fernando8aparra@gmail.com", "luisatondo28@gmail.com"];
+
+    // Observar estado de autenticación
+    onAuthStateChanged(auth, (user) => {
+      currentUser = user;
+      const isAdmin = user && admins.includes(user.email);
+      document.querySelectorAll('.admin-only').forEach(el => {
+        el.style.display = isAdmin ? 'block' : 'none';
+      });
+      if (user) loadProducts();
+    });
+
+    window.login = async () => {
+      const email = document.getElementById('loginEmail').value;
+      const password = document.getElementById('loginPassword').value;
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+        bootstrap.Modal.getInstance(document.getElementById('authModal')).hide();
+      } catch (e) {
+        alert("Error: " + e.message);
+      }
+    };
+
+    window.googleSignIn = async () => {
+      try {
+        await signInWithPopup(auth, provider);
+        bootstrap.Modal.getInstance(document.getElementById('authModal')).hide();
+      } catch (e) {
+        alert("Error Google: " + e.message);
+      }
+    };
+
+    window.register = async () => {
+      const email = document.getElementById('regEmail').value;
+      const pass = document.getElementById('regPassword').value;
+      const confirm = document.getElementById('regConfirm').value;
+      if (pass !== confirm) return alert("Las contraseñas no coinciden");
+      try {
+        await createUserWithEmailAndPassword(auth, email, pass);
+        bootstrap.Modal.getInstance(document.getElementById('authModal')).hide();
+      } catch (e) {
+        alert("Error registro: " + e.message);
+      }
+    };
+
+    window.showRegister = () => {
+      document.getElementById('loginForm').style.display = 'none';
+      document.getElementById('registerForm').style.display = 'block';
+      document.getElementById('authModalTitle').textContent = "Registrarse";
+    };
+
+    window.showLogin = () => {
+      document.getElementById('registerForm').style.display = 'none';
+      document.getElementById('loginForm').style.display = 'block';
+      document.getElementById('authModalTitle').textContent = "Iniciar Sesión";
+    };
+
+    // Cargar productos
+    async function loadProducts() {
+      const container = document.getElementById('productsContainer');
+      container.innerHTML = '';
+      const querySnapshot = await getDocs(collection(db, "products"));
+      querySnapshot.forEach((docSnap) => {
+        const data = docSnap.data();
+        const card = `
+          <div class="col">
+            <div class="product-card">
+              <img src="${data.image}" alt="${data.title}" class="product-img">
+              <i class="bi bi-pencil edit-icon admin-only" onclick="editProduct('${docSnap.id}')"></i>
+              <div class="product-info">
+                <div class="product-title">${data.title}</div>
+                <div class="product-price">$${data.price} MXN</div>
+              </div>
+            </div>
+          </div>`;
+        container.innerHTML += card;
+      });
+    }
+
+    // Editar Hero
+    window.editHero = () => {
+      const newBg = prompt("Pega la URL de la nueva imagen de fondo:");
+      if (newBg) {
+        document.getElementById('heroSection').style.backgroundImage = `linear-gradient(var(--overlay), var(--overlay)), url('${newBg}')`;
+        // Aquí podrías guardar en Firestore si quieres persistencia
+      }
+    };
+
+    // Editar título sección
+    window.editSectionTitle = () => {
+      const newTitle = prompt("Nuevo título de la sección:", document.getElementById('sectionTitle').textContent);
+      if (newTitle) document.getElementById('sectionTitle').textContent = newTitle;
+    };
+
+    // Agregar producto
+    window.addProduct = async () => {
+      const title = prompt("Título del producto:");
+      const price = prompt("Precio (MXN):");
+      const imageFile = await selectImage();
+      if (!title || !price || !imageFile) return;
+
+      const storageRef = ref(storage, 'products/' + imageFile.name);
+      await uploadBytes(storageRef, imageFile);
+      const imageUrl = await getDownloadURL(storageRef);
+
+      await addDoc(collection(db, "products"), {
+        title, price: Number(price), image: imageUrl
+      });
+      loadProducts();
+    };
+
+    // Editar producto
+    window.editProduct = async (id) => {
+      const newTitle = prompt("Nuevo título:");
+      const newPrice = prompt("Nuevo precio:");
+      let newImageUrl = null;
+
+      if (confirm("¿Cambiar imagen?")) {
+        const file = await selectImage();
+        if (file) {
+          const storageRef = ref(storage, 'products/' + file.name);
+          await uploadBytes(storageRef, file);
+          newImageUrl = await getDownloadURL(storageRef);
+        }
+      }
+
+      const updates = {};
+      if (newTitle) updates.title = newTitle;
+      if (newPrice) updates.price = Number(newPrice);
+      if (newImageUrl) updates.image = newImageUrl;
+
+      if (Object.keys(updates).length > 0) {
+        await updateDoc(doc(db, "products", id), updates);
+      }
+
+      if (confirm("¿Borrar este producto?")) {
+        await deleteDoc(doc(db, "products", id));
+      }
+
+      loadProducts();
+    };
+
+    // Selector de imagen
+    function selectImage() {
+      return new Promise((resolve) => {
+        const input = document.createElement('input');
+        input.type = 'file';
+        input.accept = 'image/*';
+        input.onchange = (e) => resolve(e.target.files[0]);
+        input.click();
+      });
+    }
+
+    // Cargar productos al inicio (si está logueado como admin)
+    if (currentUser && admins.includes(currentUser.email)) loadProducts();
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
